# sphinx-vb-domain

./: .gitignore  LICENSE  README.md  README_ja.md  exxm-conf.yml  pyproject.toml
books/: 001.xlsm
docs/: make.bat
docs-dev/: notes.md  references.md  spec.md
docs/source/: conf.py  index.md  links.md  md.md  modules.rst  rest.rst
docs/source/_templates/: notes_for_modules.rst
docs/source/modules/: index.rst
docs_kiro/: article_draft.md  interview_notes.md
macros/001/: Module1.bas  モジュール1.bas
src/sphinx_vb_domain/: __init__.py  utils.py  vb_autodoc.py  vb_domain.py
src/vb_domain/: __init__.py
tests/vb_function/: test_handle_signature.py
