[project]
name = "vb-domain"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "satamame", email = "satax@nifty.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "ruff>=0.8.3",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_vb_domain"]

[tool.pytest.ini_options]
pythonpath = "src"
