[project]
name = "sphinx-vb-domain"
version = "0.3.0"
description = "Sphinx extension to handle Visual Basic Domain."
authors = [
    { name = "satamame", email = "satamame@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
keywords = ["sphinx", "extension", "vb", "visual basic"]
dependencies = [
    "sphinx>=8.1.3",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/satamame/sphinx-vb-domain"
Repository = "https://github.com/satamame/sphinx-vb-domain.git"
Issues = "https://github.com/satamame/sphinx-vb-domain/issues"
# Documentation = "https://github.com/satamame/sphinx-vb-domain/blob/main/README.md"
Changelog = "https://github.com/satamame/sphinx-vb-domain/releases"

[build-system]
requires = ["hatchling==1.21.0"]  # Metadata-Version を 2.4 にしないため
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "ruff>=0.8.3",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true
metadata-version = "2.3"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_vb_domain"]

[tool.pytest.ini_options]
pythonpath = "src"
